fixed the css of the concerts listings. Before, the listings were overlapping with title and header when scrolling. Now, listings get cut off as user scrolls so they never overlap with rest of upper components

--- a/concert-finder/src/ConcertsNearby.css
+++ b/concert-finder/src/ConcertsNearby.css
@@ -21,8 +21,10 @@
 }
 
 .listingsContainer {
-    position: relative;
+    overflow-y: auto;
+    position: fixed;
     top: 215px;
-    overflow: scroll;
+    bottom: 0;
+    max-height: calc(100vh-100px);
     scrollbar-width: none;
 }
